Code smells & coverage analysis